2001-06-09  Dave Peticolas  <dave@krondo.com>

	* configure.in: fix bug

	* doc/sgml/C/xacc-about.sgml: update credits

	* src/gnome/window-main.c (gnc_main_window_about_cb): update
	credits

	* AUTHORS: update credits

	* src/gnome/reconcile-list.c (gnc_reconcile_list_refresh): fix
	bugs

	* src/gnome/dialog-utils.c (gnc_clist_add_check): fix bugs

	* doc/sgml/pt_PT/Makefile.am: remove adjust balance docs

	* doc/sgml/C/Makefile.am: remove adjust balance docs

	* doc/sgml/de_DE/xacc-quickstart.sgml: fix docs

	* doc/sgml/pt_PT/xacc-quickstart.sgml: fix docs

	* doc/sgml/C/xacc-quickstart.sgml: fix docs

	* src/scm/help-topics-index.scm: work on index

	* src/gnome/window-help.c (gnc_help_show_topic): first check
	current location for match

	* src/SplitLedger.c (xaccSRDuplicateCurrent): fix bug

	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): allow
	group to be specified
	(gnc_account_create_opening_balance): search in given account's
	group

2001-06-08  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): first
	search for untranslated name, then translated name.

	* src/gnome/new-user-callbacks.c
	(on_chooseAccountTypesPage_prepare): suspend & resume gui
	refreshes while loading accounts.
	add more suspend & resume calls for other big changes

	* src/gnome/new-user-funs.c (gnc_create_newUserDialog): make clist
	column titles passive

	* src/gnome/new-user-callbacks.c
	(on_chooseAccountTypesPage_prepare): use pointer<->int conversion
	macros
	(gnc_get_ea_locale_dir): take out debugging messages
	(on_newAccountTypesList_unselect_row): fix bug
	(on_newAccountTypesList_select_row): fix bug
	(add_each_gea_to_clist): fix mem leak
	(on_newAccountCurrencyChoosePage_prepare): use pointer<->int
	conversion macros

	* src/SplitLedger.c (xaccSRGetEntryHandler): handle reconcile
	cell string as appropriate for translate flag.

	* src/register/table-allgui.c (gnc_table_get_entry): return
	translated version